--- a/app/src/main/res/layout/fragment_cadastro.xml
+++ b/app/src/main/res/layout/fragment_cadastro.xml
@@ -18,7 +18,8 @@
             android:id="@+id/login_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Novo Cadastro"
+            android:text="CADASTRO"
+            android:letterSpacing="0.4"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -130,13 +131,13 @@
 
         <Button
             android:id="@+id/login_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
             android:layout_marginVertical="32dp"
             android:text="Cadastrar"
             android:textColor="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/password_cofirm_edit_text"
+            app:layout_constraintStart_toStartOf="@+id/password_cofirm_edit_text"
             app:layout_constraintTop_toBottomOf="@id/password_cofirm_edit_text" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
