--- a/app/src/main/res/layout/fragment_esqueci_senha.xml
+++ b/app/src/main/res/layout/fragment_esqueci_senha.xml
@@ -5,6 +5,16 @@
     android:layout_height="match_parent"
     android:background="@color/blue_black">
 
+    <ImageView
+        android:id="@+id/logo_text_view"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@mipmap/ic_logo_foreground"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
@@ -14,14 +24,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/logo_text_view"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:layout_constraintEnd_toEndOf="@+id/esqueciSenha_text_view"
-            app:layout_constraintStart_toStartOf="@+id/esqueciSenha_text_view"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <TextView
             android:id="@+id/esqueciSenha_text_view"
             android:layout_width="wrap_content"
@@ -29,11 +31,12 @@
             android:layout_marginTop="8dp"
             android:text="Esqueci Senha"
             android:textSize="20sp"
+            android:letterSpacing="0.15"
             android:textColor="@color/white"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/logo_text_view" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView3"
@@ -70,7 +73,7 @@
         <Button
             android:id="@+id/login_button"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginVertical="16dp"
             android:text="Enviar"
             android:textColor="@color/white"
