--- a/app/src/main/res/layout/fragmet_login.xml
+++ b/app/src/main/res/layout/fragmet_login.xml
@@ -5,6 +5,17 @@
     android:layout_height="match_parent"
     android:background="@color/blue_black">
 
+    <ImageView
+        android:id="@+id/logo_text_view"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="20dp"
+        android:src="@mipmap/ic_logo_foreground"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
@@ -14,22 +25,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/logo_text_view"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:background="@color/blue"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <TextView
             android:id="@+id/login_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:text="Login"
+            android:text="LOGIN"
             android:textSize="20sp"
+            android:letterSpacing="0.4"
             android:textStyle="bold"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +91,7 @@
         <Button
             android:id="@+id/login_button"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginVertical="16dp"
             android:text="Entrar"
             android:textColor="@color/white"
